--- a/index.html
+++ b/index.html
@@ -7,17 +7,11 @@
 </head>
 <body class="body_backgorund">
 
-<center>
-	<h1>My First Canvas</h1>
+<center> 
+	<h1>Olympic Symbol</h1>
 	<canvas id="mycanvas" width="800" height="600">
 	</canvas>
-	<br>
-	<span> Color -  </span>
-	<input type="text" id="color">
-	<br>
-	<button onclick="cleararea();">Clear</button>
 </center>
-
 
 <script src="C81main.js"></script>
 </body>
